# Generated by Django 6.0 on 2025-12-14 13:07

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Session',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('committee', models.CharField(choices=[('front_committee', 'Frontend Committee'), ('back_committee', 'Backend Committee'), ('mobile_committee', 'Mobile Committee'), ('ai_committee', 'AI Committee'), ('uiux_committee', 'UI/UX Committee'), ('dataAnalysis_committee', 'Data Analysis Committee')], help_text='The committee this session belongs to.', max_length=50)),
                ('name', models.CharField(max_length=100)),
                ('start_time', models.DateTimeField()),
                ('end_time', models.DateTimeField()),
                ('location', models.CharField(blank=True, max_length=100, null=True)),
                ('instructor', models.CharField(blank=True, max_length=100, null=True)),
                ('manual_code', models.CharField(blank=True, max_length=8, null=True, unique=True)),
            ],
        ),
    ]
