erDiagram
    User ||--o{ AttendanceRecord : "has"
    Session ||--o{ AttendanceRecord : "logs"

    User {
        int id PK
        string username
        string role "admin | member"
        string committee "front | back | mobile | ai | etc"
        string phone_number
        string password
        string email
    }

    Session {
        int id PK
        string committee
        string name
        datetime start_time
        datetime end_time
        string location
        string instructor
        string manual_code
    }

    AttendanceRecord {
        int id PK
        int user_id FK
        int session_id FK
        datetime check_in_time
        string status "present | late | absent"
    }
